[metadata]
name = zonecheck
version = 1.3.0-beta0
author = John Bond
author_email = pypi@johnbond.org
description = Helper libraries to check if DNS zonefiles configured on a server are the same as DNS master servers.
keywords =
	dns
	puppet
license = License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icann-dns/zonecheck
project_urls = 
	Bug Tracker = https://github.com/icann-dns/zonecheck/issues
classifiers  =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: Name Service (DNS)
	Topic :: System :: Networking :: Monitoring
	Topic :: System :: Systems Administration
	Topic :: Utilities

[options]	
packages = find:
scripts =
	bin/zonecheck
	bin/zonechecklite
	bin/axfrcheck
install_requires = 
	dnspython >= 2.0.0 ; python_version>='3.6'
	dnspython >= 1.15 ; python_version<'3.0'
	pyyaml >= 5.2
	future
